fixed social icons and default img style on mobile

--- a/css/_core.scss
+++ b/css/_core.scss
@@ -18,7 +18,7 @@ h1{
 h2, h3, h4, h5{
   font-family:$f-Freight;
   margin-top:0;
-  margin-bottom:2%;
+  margin-bottom:4%;
 }
 p{
   font-size:1.25rem;
@@ -34,7 +34,7 @@ a{
 }
 img {
   width: 110%;
-  margin-bottom: 7%;
+  margin-bottom: 10%;
   margin-top: 7%;
   margin-left:-20px;
 }
